added light theme

--- a/src/html/about.html
+++ b/src/html/about.html
@@ -5,8 +5,8 @@
     <div class="about-content">
 
       <h2 class="h2 section-title" data-reveal="right">
-        Hi. I’m <br>
-        Richard Ryan
+        Hello! I’m <br>
+        Gearonix
       </h2>
 
       <div class="wrapper has-before" data-reveal="right">
@@ -19,9 +19,6 @@
           I’m ready to give you my best.
         </p>
 
-        <img src="img/signature.png" width="151" height="92" loading="lazy" alt="signature"
-             class="img">
-
       </div>
 
     </div>
@@ -33,16 +30,8 @@
              class="img-cover">
       </div>
 
-      <img src="img/about-shape-1.png" width="178" height="178" loading="lazy" alt=""
-           class="shape shape-1">
-
-      <img src="img/about-shape-2.svg" width="659" height="653" loading="lazy" alt=""
-           class="shape shape-2">
 
     </figure>
-
-    <img src="img/about-shape-3.svg" width="239" height="232" loading="lazy" alt=""
-         class="shape shape-3">
 
   </div>
 </section>
