--- a/src/html/header.html
+++ b/src/html/header.html
@@ -6,7 +6,7 @@
     </a>
 
     <button class="nav-open-btn" aria-label="open menu" data-nav-toggler>
-      <img src="img/menu.svg" width="17" height="17" alt="menu icon">
+      <span class="material-icons">more_horiz</span>
     </button>
 
     <nav class="navbar" data-navbar>
@@ -49,18 +49,6 @@
         </li>
 
       </ul>
-
-      <button class="login-btn">
-        <img src="img/user.svg" width="21" height="21" alt="user icon">
-
-        <span class="span">Login</span>
-      </button>
-
-      <p class="navbar-title">My Address</p>
-
-      <address class="navbar-text">
-        3287 Indiana Avenue, Waialua, Hawaii
-      </address>
 
       <p class="navbar-text">
         Urgent issue? call us at
