--- a/src/html/main.html
+++ b/src/html/main.html
@@ -2,26 +2,26 @@
 <section class="section hero" id="home" aria-label="home">
   <div class="container">
 
-    <img src="img/hero-banner.png" width="322" height="322" alt="" class="hero-banner">
+    <img src="img/avatar.jpg" width="322" height="322" alt="" class="hero-banner">
 
     <div class="hero-content">
 
-      <h1 class="h1 hero-title">Richard Ryan</h1>
+      <h1 class="h1 hero-title">Uzhanin Egor</h1>
 
       <div class="wrapper h2">
-        <strong class="strong" data-letter-effect>Photographer</strong>
-        <strong class="strong" data-letter-effect>Shutterbug</strong>
-        <strong class="strong" data-letter-effect>Cameraman</strong>
-        <strong class="strong" data-letter-effect>Pacific Portraits</strong>
+        <strong class="strong" data-letter-effect>Frontend</strong>
+        <strong class="strong" data-letter-effect>Javascript</strong>
+        <strong class="strong" data-letter-effect>React.js</strong>
+        <strong class="strong" data-letter-effect>Next.js</strong>
+        <strong class="strong" data-letter-effect>Testing</strong>
+        <strong class="strong" data-letter-effect>Typescript</strong>
       </div>
 
-      <p class="hero-text">15+ Years Of Experience</p>
+      <p class="hero-text">16 year old developer</p>
 
     </div>
 
   </div>
-
-  <img src="img/hero-shape.svg" width="211" height="189" alt="" class="shape">
 
 </section>
 
