--- a/src/html/portfolio.html
+++ b/src/html/portfolio.html
@@ -2,16 +2,16 @@
 <section class="section portfolio" id="portfolio" aria-labelledby="portfolio-label">
   <div class="container">
 
+        <h2 class="h2 section-title" id="portfolio-label" data-reveal>My Projects</h2>
     <div class="portfolio-list">
 
       <div class="wrapper">
 
-        <h2 class="h2 section-title" id="portfolio-label" data-reveal>My Recent Work.</h2>
 
         <div class="portfolio-card" data-reveal>
 
-          <figure class="card-banner img-holder has-before" style="--width: 700; --height: 605;">
-            <img src="img/portfolio-1.jpg" width="700" height="605" loading="lazy" alt="Shoe Promo"
+          <figure class="card-banner img-holder has-before" style="--width: 700; --height: 650;">
+            <img src="img/adonis-ecommerce.png" width="700" height="605" loading="lazy" alt="Shoe Promo"
                  class="img-cover">
           </figure>
 
@@ -31,88 +31,36 @@
           </a>
 
         </div>
-
-        <div class="portfolio-card" data-reveal>
-
-          <figure class="card-banner img-holder has-before" style="--width: 700; --height: 1091;">
-            <img src="img/portfolio-2.jpg" width="700" height="1091" loading="lazy" alt="Wedding Shot"
-                 class="img-cover">
-          </figure>
-
-          <div class="card-content">
-            <h3 class="h4">
-              <a href="#" class="card-title">Wedding Shot</a>
-            </h3>
-
-            <p class="card-tag">Wedding</p>
-          </div>
-
-          <a href="#" class="btn-icon" aria-label="See more">
-            <svg xmlns="http://www.w3.org/2000/svg" width="43" height="20" viewBox="0 0 43 20" fill="none">
-              <path d="M0 10H41" stroke="black" stroke-width="2" />
-              <path d="M33 1L41.9 10.2727L33 19" stroke="black" stroke-width="2" />
-            </svg>
-          </a>
-
-        </div>
-
       </div>
 
-      <div class="wrapper">
+<!--      <div class="wrapper">-->
+<!--        <div class="portfolio-card" data-reveal>-->
 
-        <div class="portfolio-card" data-reveal>
+<!--          <figure class="card-banner img-holder has-before" style="&#45;&#45;width: 300; &#45;&#45;height: 440;">-->
+<!--            <img src="img/space-calendar.png" width="700" height="605" loading="lazy" alt="Fashion Show"-->
+<!--                 class="img-cover">-->
+<!--          </figure>-->
 
-          <figure class="card-banner img-holder has-before" style="--width: 700; --height: 1000;">
-            <img src="img/portfolio-3.jpg" width="700" height="1000" loading="lazy" alt="Fashion Show"
-                 class="img-cover">
-          </figure>
+<!--          <div class="card-content">-->
+<!--            <h3 class="h4">-->
+<!--              <a href="#" class="card-title">Fashion Show</a>-->
+<!--            </h3>-->
 
-          <div class="card-content">
-            <h3 class="h4">
-              <a href="#" class="card-title">Fashion Show</a>
-            </h3>
+<!--            <p class="card-tag">Fashion, Model</p>-->
+<!--          </div>-->
 
-            <p class="card-tag">Fashion, Model</p>
-          </div>
+<!--          <a href="#" class="btn-icon" aria-label="See more">-->
+<!--            <svg xmlns="http://www.w3.org/2000/svg" width="43" height="20"-->
+<!--                 viewBox="0 0 43 20" fill="none">-->
+<!--              <path d="M0 10H41" stroke="black" stroke-width="2" />-->
+<!--              <path d="M33 1L41.9 10.2727L33 19" stroke="black" stroke-width="2" />-->
+<!--            </svg>-->
+<!--          </a>-->
 
-          <a href="#" class="btn-icon" aria-label="See more">
-            <svg xmlns="http://www.w3.org/2000/svg" width="43" height="20" viewBox="0 0 43 20" fill="none">
-              <path d="M0 10H41" stroke="black" stroke-width="2" />
-              <path d="M33 1L41.9 10.2727L33 19" stroke="black" stroke-width="2" />
-            </svg>
-          </a>
-
-        </div>
-
-        <div class="portfolio-card" data-reveal>
-
-          <figure class="card-banner img-holder has-before" style="--width: 700; --height: 850;">
-            <img src="img/portfolio-4.jpg" width="700" height="850" loading="lazy" alt="Jumbo Barger"
-                 class="img-cover">
-          </figure>
-
-          <div class="card-content">
-            <h3 class="h4">
-              <a href="#" class="card-title">Jumbo Barger</a>
-            </h3>
-
-            <p class="card-tag">Food</p>
-          </div>
-
-          <a href="#" class="btn-icon" aria-label="See more">
-            <svg xmlns="http://www.w3.org/2000/svg" width="43" height="20" viewBox="0 0 43 20" fill="none">
-              <path d="M0 10H41" stroke="black" stroke-width="2" />
-              <path d="M33 1L41.9 10.2727L33 19" stroke="black" stroke-width="2" />
-            </svg>
-          </a>
-
-        </div>
-
-      </div>
+<!--        </div>-->
+<!--      </div>-->
 
     </div>
-
-    <img src="img/portfolio-shape.svg" width="286" height="232" loading="lazy" alt="" class="shape">
 
   </div>
 </section>
