reworked "my projects" section

--- a/src/html/portfolio.html
+++ b/src/html/portfolio.html
@@ -1,65 +1,36 @@
-
 <section class="section portfolio" id="portfolio" aria-labelledby="portfolio-label">
   <div class="container">
-
         <h2 class="h2 section-title" id="portfolio-label" data-reveal>My Projects</h2>
     <div class="portfolio-list">
 
-      <div class="wrapper">
-
-
-        <div class="portfolio-card" data-reveal>
-
-          <figure class="card-banner img-holder has-before" style="--width: 700; --height: 650;">
-            <img src="img/adonis-ecommerce.png" width="700" height="605" loading="lazy" alt="Shoe Promo"
-                 class="img-cover">
-          </figure>
-
-          <div class="card-content">
-            <h3 class="h4">
-              <a href="#" class="card-title">Shoe Promo</a>
-            </h3>
-
-            <p class="card-tag">Product</p>
+      <div class="portfolio-wrapper">
+        <div class="portfolio-card adonis-ecommerce" data-reveal>
+          <a data-href="adonis-ecommerce"></a>
+          <div class="card-image-background"></div>
+          <div class="card-text">
+            <h3>Adonis Ecommerce</h3>
+            <p>FullStack e-commerce app</p>
           </div>
-
-          <a href="#" class="btn-icon" aria-label="See more">
-            <svg xmlns="http://www.w3.org/2000/svg" width="43" height="20" viewBox="0 0 43 20" fill="none">
-              <path d="M0 10H41" stroke="black" stroke-width="2" />
-              <path d="M33 1L41.9 10.2727L33 19" stroke="black" stroke-width="2" />
-            </svg>
-          </a>
-
+          <div class="card-github">
+            <a href="https://github.com/Gearonix/Adonis-Ecommerce">
+              <img src="img/github.png">
+            </a>
+          </div>
+        </div>
+        <div class="portfolio-card space-calendar" data-reveal>
+          <a data-href="space-calendar"></a>
+            <div class="card-image-background"></div>
+            <div class="card-text">
+              <h3>Space Calendar</h3>
+              <p>Calendar with the ability to plan your day.</p>
+            </div>
+            <div class="card-github">
+              <a href="https://github.com/Gearonix/Space-Calendar">
+              <img src="img/github.png">
+              </a>
+            </div>
         </div>
       </div>
-
-<!--      <div class="wrapper">-->
-<!--        <div class="portfolio-card" data-reveal>-->
-
-<!--          <figure class="card-banner img-holder has-before" style="&#45;&#45;width: 300; &#45;&#45;height: 440;">-->
-<!--            <img src="img/space-calendar.png" width="700" height="605" loading="lazy" alt="Fashion Show"-->
-<!--                 class="img-cover">-->
-<!--          </figure>-->
-
-<!--          <div class="card-content">-->
-<!--            <h3 class="h4">-->
-<!--              <a href="#" class="card-title">Fashion Show</a>-->
-<!--            </h3>-->
-
-<!--            <p class="card-tag">Fashion, Model</p>-->
-<!--          </div>-->
-
-<!--          <a href="#" class="btn-icon" aria-label="See more">-->
-<!--            <svg xmlns="http://www.w3.org/2000/svg" width="43" height="20"-->
-<!--                 viewBox="0 0 43 20" fill="none">-->
-<!--              <path d="M0 10H41" stroke="black" stroke-width="2" />-->
-<!--              <path d="M33 1L41.9 10.2727L33 19" stroke="black" stroke-width="2" />-->
-<!--            </svg>-->
-<!--          </a>-->
-
-<!--        </div>-->
-<!--      </div>-->
-
     </div>
 
   </div>
