reworked portfolio, skills, footer, added smooth scrolling

--- a/src/html/about.html
+++ b/src/html/about.html
@@ -12,11 +12,9 @@
       <div class="wrapper has-before" data-reveal="right">
 
         <p class="section-text">
-          A passionate
-          <em class="em">photograher</em>
-          who are working in this field for
-          <em class="em">last 10 years.</em>
-          I’m ready to give you my best.
+          Build client-side applications with modern features like <em class="em">SPA</em>
+          and maintain semantic coding style among other best practices
+          for SEO optimisation. Use modern <em class="em">tech</em> such as Next.js, Typescript, Styled-Components.
         </p>
 
       </div>
