--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -3,29 +3,39 @@
   <div class="footer-top section" id="contact">
     <div class="container">
 
-      <p class="section-subtitle" data-reveal>Contact Us</p>
+      <p class="section-subtitle" data-reveal>Contact me</p>
 
       <h2 class="h2 section-title" data-reveal>
-        Work inquiry, Job oportunities? Send Message.
+        Send me a message.
       </h2>
 
-      <a href="#" class="btn-icon" data-reveal>
-        <img src="img/arrow-forward.svg" width="43" height="20" loading="lazy" alt="arrow-forward icon">
-      </a>
+      <div href="#" class="footer-icon-wrapper" data-reveal>
+        <div class="icon-wrapper">
+          <a data-href="https://github.com/Gearonix"></a>
+          <img src="img/github.svg"></div>
+        <div class="icon-wrapper">
+          <a data-href="https://t.me/gearonixx"></a>
+          <img src="img/telegram.svg"></div>
+        <div class="icon-wrapper">
+          <a data-href="https://wa.me/80264942003"></a>
+          <img src="img/whatsapp.svg"></div>
+        <div class="icon-wrapper">
+          <a data-href="https://vk.com/id606417601"></a>
+          <img src="img/vk.svg">
+        </div>
+      </div>
 
-      <img src="img/footer-1.jpg" width="159" height="176" loading="lazy" alt="photography"
+      <img src="img/hero-guy-5.png" width="159" height="176" loading="lazy" alt="photography"
            class="abs-img abs-img-1" data-reveal>
 
-      <img src="img/footer-2.jpg" width="265" height="275" loading="lazy" alt="photography"
+      <img src="img/hero-guy-2.png" width="265" height="275" loading="lazy" alt="photography"
            class="abs-img abs-img-2" data-reveal>
 
-      <img src="img/footer-3.jpg" width="303" height="272" loading="lazy" alt="photography"
+      <img src="img/hero-guy-3.png" width="303" height="272" loading="lazy" alt="photography"
            class="abs-img abs-img-3" data-reveal>
 
-      <img src="img/footer-4.jpg" width="175" height="175" loading="lazy" alt="photography"
+      <img src="img/hero-guy-1.png" width="175" height="175" loading="lazy" alt="photography"
            class="abs-img abs-img-4" data-reveal>
-
-      <img src="img/footer-shape.svg" width="185" height="134" loading="lazy" alt="" class="shape">
 
     </div>
   </div>
@@ -40,20 +50,20 @@
       <ul class="social-list">
 
         <li>
-          <a href="#" class="social-link">Fa.</a>
+          <a href="https://t.me/gearonixx" class="social-link">Telegram.</a>
         </li>
 
         <li>
-          <a href="#" class="social-link">Insta.</a>
+          <a href="https://github.com/Gearonix" class="social-link">Github.</a>
         </li>
 
         <li>
-          <a href="#" class="social-link">Tw.</a>
+          <a href="https://vk.com/id606417601" class="social-link">Vk.</a>
         </li>
 
       </ul>
 
-      <p class="copyright">Made with love</p>
+      <a class="copyright" href="#">Egor Uzhanin</a>
 
     </div>
   </div>
