--- a/src/html/header.html
+++ b/src/html/header.html
@@ -5,9 +5,19 @@
       <img src="img/logo.svg" width="40" height="40" alt="Richard home">
     </a>
 
-    <button class="nav-open-btn" aria-label="open menu" data-nav-toggler>
-      <span class="material-icons">more_horiz</span>
-    </button>
+    <div class="navbar-buttons">
+      <button class="nav-icon-btn" aria-label="open menu">
+        <a data-href="https://t.me/gearonixx"></a>
+        <img src="img/telegram.svg">
+      </button>
+      <button class="nav-icon-btn" aria-label="open menu">
+        <a data-href="https://github.com/Gearonix"></a>
+        <img src="img/github.svg">
+      </button>
+      <button class="nav-open-btn" aria-label="open menu" data-nav-toggler>
+        <span class="material-icons">more_horiz</span>
+      </button>
+    </div>
 
     <nav class="navbar" data-navbar>
 
@@ -16,10 +26,12 @@
           <img src="img/nav-logo.svg" width="140" height="40" alt="Richard home" class="img">
         </a>
 
-        <button class="nav-close-btn" aria-label="close menu" data-nav-toggler>
-          <span class="span one"></span>
-          <span class="span two"></span>
-        </button>
+          <button class="nav-close-btn" aria-label="close menu" data-nav-toggler>
+            <span class="span one"></span>
+            <span class="span two"></span>
+          </button>
+
+
       </div>
 
       <ul class="navbar-list">
