--- a/src/html/portfolio.html
+++ b/src/html/portfolio.html
@@ -1,15 +1,16 @@
 <section class="section portfolio" id="portfolio" aria-labelledby="portfolio-label">
   <div class="container">
         <h2 class="h2 section-title" id="portfolio-label" data-reveal>My Projects</h2>
-    <div class="portfolio-list">
+    <p class="section-description" data-reveal>Large Web Applications. Watch this!</p>
+    <div class="portfolio-list" data-reveal>
 
       <div class="portfolio-wrapper">
-        <div class="portfolio-card adonis-ecommerce" data-reveal>
+        <div class="portfolio-card adonis-ecommerce">
           <a data-href="adonis-ecommerce"></a>
           <div class="card-image-background"></div>
           <div class="card-text">
             <h3>Adonis Ecommerce</h3>
-            <p>FullStack e-commerce app</p>
+            <p>FullStack e-commerce app build on Next.js/Nest.js</p>
           </div>
           <div class="card-github">
             <a href="https://github.com/Gearonix/Adonis-Ecommerce">
@@ -17,7 +18,7 @@
             </a>
           </div>
         </div>
-        <div class="portfolio-card space-calendar" data-reveal>
+        <div class="portfolio-card space-calendar">
           <a data-href="space-calendar"></a>
             <div class="card-image-background"></div>
             <div class="card-text">
@@ -35,8 +36,4 @@
 
   </div>
 </section>
-
-</article>
-</main>
-
 
