--- a/src/index.html
+++ b/src/index.html
@@ -14,21 +14,24 @@
 </head>
 
 <body class="active" id="top">
-  @@include('html/preloader.html')
-  @@include('html/header.html')
-  <main>
-    <article>
-      @@include('html/main.html')
-    </article>
-  </main>
-  @@include('html/about.html')
-  @@include('html/portfolio.html')
-  @@include('html/footer.html')
+  <div id="root">
+    @@include('html/preloader.html')
+    @@include('html/header.html')
+    <main>
+      <article>
+        @@include('html/main.html')
+      </article>
+    </main>
+    @@include('html/about.html')
+    @@include('html/skills.html')
+    @@include('html/portfolio.html')
+    @@include('html/footer.html')
 
-  <a href="#top" class="back-top-btn" aria-label="back to top" data-back-top-btn>0%</a>
+    <a href="#top" class="back-top-btn" aria-label="back to top" data-back-top-btn>0%</a>
 
-  <div class="cursor" data-cursor></div>
-
+    <div class="cursor" data-cursor></div>
+  </div>
+  <script src="smooth-scrollbar.js"></script>
   <script src="index.js"></script>
 </body>
 </html>
