--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
     @@include('html/portfolio.html')
     @@include('html/footer.html')
 
-    <a href="#top" class="back-top-btn" aria-label="back to top" data-back-top-btn>0%</a>
+    <a class="back-top-btn" data-back-top-btn href="#">0%</a>
 
     <div class="cursor" data-cursor></div>
   </div>
