reworked portfolio section, improved UI

--- a/src/html/about.html
+++ b/src/html/about.html
@@ -23,9 +23,9 @@
 
     <figure class="about-banner" data-reveal="left">
 
-      <div class="img-holder has-before" style="--width: 512; --height: 684;">
-        <img src="img/about-banner.jpg" width="512" height="684" loading="lazy" alt="Riachard Ryan"
-             class="img-cover">
+      <div class="img-holder has-before" style="--width: 900; --height: 590;">
+        <img alt="Riachard Ryan" class="img-cover"
+             src="img/about-image.png">
       </div>
 
 
