--- a/src/html/portfolio.html
+++ b/src/html/portfolio.html
@@ -1,39 +1,144 @@
 <section class="section portfolio" id="portfolio" aria-labelledby="portfolio-label">
-  <div class="container">
+    <div class="container">
         <h2 class="h2 section-title" id="portfolio-label" data-reveal>My Projects</h2>
-    <p class="section-description" data-reveal>Large Web Applications. Watch this!</p>
-    <div class="portfolio-list" data-reveal>
+        <p class="section-description" data-reveal>Large Web Applications. Watch this!</p>
+        <div class="portfolio-list">
 
-      <div class="portfolio-wrapper">
-        <div class="portfolio-card adonis-ecommerce">
-          <a data-href="adonis-ecommerce"></a>
-          <div class="card-image-background"></div>
-          <div class="card-text">
-            <h3>Adonis Ecommerce</h3>
-            <p>FullStack e-commerce app build on Next.js/Nest.js</p>
-          </div>
-          <div class="card-github">
-            <a href="https://github.com/Gearonix/Adonis-Ecommerce">
-              <img src="img/github.png">
-            </a>
-          </div>
-        </div>
-        <div class="portfolio-card space-calendar">
-          <a data-href="space-calendar"></a>
-            <div class="card-image-background"></div>
-            <div class="card-text">
-              <h3>Space Calendar</h3>
-              <p>Calendar with the ability to plan your day.</p>
+            <div class="portfolio-wrapper">
+                <div class="portfolio-card adonis-ecommerce" data-reveal="left">
+                    <a data-href="adonis-ecommerce"></a>
+                    <div class="card-image-background"></div>
+                    <div class="card-text">
+                        <h3>Adonis Ecommerce</h3>
+                        <p>FullStack e-commerce app build on Next.js/Nest.js</p>
+                    </div>
+                    <div class="card-github">
+                        <a href="https://github.com/Gearonix/Adonis-Ecommerce">
+                            <img src="img/github.png">
+                        </a>
+                    </div>
+                </div>
+                <div class="portfolio-card-block" data-reveal="right">
+                    <h5 class="portfolio-card-subtitle">FullStack Project</h5>
+                    <h3 class="portfolio-card-title">Adonis Ecommerce</h3>
+                    <div class="portfolio-card-description">
+                        <a data-href="adonis-ecommerce"></a>
+                        <p>
+                            <em>E-commerce platform</em> with authorization,
+                            messenger, comments and more,
+                            built on <em>Next.js/Nest.js</em>. The user can change the profile,
+                            communicate with other users in real time, add products
+                            to the cart, filter, search. The application integrates
+                            <em>Storybook</em>, <em>Jest and RTL</em>,
+                            the architecture is <em>Feature
+                            Sliced Design</em>. Be sure to check out <em>Github</em> for a
+                            complete understanding of the project!
+                        </p>
+                        <div class="portfolio-card-time">
+                            <img src="img/clock.svg">
+                            <span>3 months</span>
+                        </div>
+                    </div>
+                    <div class="portfolio-card-tags">
+                        <span>Next.js</span>
+                        <span>Nest.js</span>
+                        <span>Typescript</span>
+                        <span>Socket.io</span>
+                        <span>Redux Toolkit</span>
+                        <span>i18n</span>
+                        <span>JWT</span>
+                        <span>Nest.js</span>
+                        <span>Storybook</span>
+                        <span>Jest</span>
+                        <span>Github Actions</span>
+                        <span>React Spring</span>
+                        <span>Material UI</span>
+                        <span>RTL</span>
+                        <span>Feature-Sliced-Design</span>
+                        <span>SCSS</span>
+                    </div>
+                    <div class="portfolio-card-icons">
+                        <div class="portfolio-card-icon">
+                            <a data-href="https://github.com/Gearonix/Adonis-Ecommerce"></a>
+                            <img src="img/github.svg">
+                        </div>
+                        <div class="portfolio-card-icon">
+                            <a data-href="adonis-ecommerce"></a>
+                            <img src="img/link.svg">
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div class="card-github">
-              <a href="https://github.com/Gearonix/Space-Calendar">
-              <img src="img/github.png">
-              </a>
+            <div class="portfolio-wrapper to-left">
+                <div class="portfolio-card-block" data-reveal="right">
+                    <h5 class="portfolio-card-subtitle">FullStack Project</h5>
+                    <h3 class="portfolio-card-title">Space Calendar</h3>
+                    <div class="portfolio-card-description">
+                        <a data-href="space-calendar"></a>
+                        <p>
+                            <em>Calendar</em> with the ability to plan your day
+                            built on <em>React.js</em>/<em>Express.js</em>.
+                            There is support for <em>two languages</em>, authorization,
+                            <em>adding tasks</em>,
+                            changing the background of tasks and the user's avatar. Beautiful
+                            animations. My first full stack project.
+                        </p>
+                        <div class="portfolio-card-time">
+                            <img src="img/clock.svg">
+                            <span>1 month</span>
+                        </div>
+                    </div>
+                    <div class="portfolio-card-tags">
+                        <span>React.js</span>
+                        <span>Express.js</span>
+                        <span>Typescript</span>
+                        <span>i18n</span>
+                        <span>Redux Toolkit</span>
+                        <span>Styled Components</span>
+                        <span>Axios</span>
+                        <span>Material-UI</span>
+                        <span>React-Spring</span>
+                    </div>
+                    <div class="portfolio-card-icons">
+                        <div class="portfolio-card-icon">
+                            <a data-href="https://github.com/Gearonix/Space-Calendar"></a>
+                            <img src="img/github.svg">
+                        </div>
+                        <div class="portfolio-card-icon">
+                            <a data-href="space-calendar"></a>
+                            <img src="img/link.svg">
+                        </div>
+                    </div>
+                </div>
+                <div class="portfolio-card space-calendar" data-reveal="left">
+                    <a data-href="space-calendar"></a>
+                    <div class="card-image-background"></div>
+                    <div class="card-text">
+                        <h3>Space Calendar</h3>
+                        <p>Calendar with the ability to plan your day.</p>
+                    </div>
+                    <div class="card-github">
+                        <a href="https://github.com/Gearonix/Space-Calendar">
+                            <img src="img/github.png">
+                        </a>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+        <div class="portfolio__addon-1">
+            <div class="eye-wrapper" data-reveal>
+                <div class="eye" data-eye>
+                    <div class="eye-iris green">
+                        <div class="eye-lens"></div>
+                    </div>
+                </div>
             </div>
         </div>
-      </div>
+        <div class="portfolio__addon-2" data-reveal>
+            <img src="img/blog-guy-3.png">
+        </div>
     </div>
 
-  </div>
 </section>
 
