--- a/src/html/skills.html
+++ b/src/html/skills.html
@@ -40,7 +40,16 @@
               </div>
           </div>
           <div class="skills__wrapper-section" data-reveal>
-              <img src="img/meditation.png">
+              <img src="img/skills-image1.png">
+          </div>
+      </div>
+      <div class="skills__addon-1">
+          <div class="eye-wrapper" data-reveal>
+              <div class="eye" data-eye>
+                  <div class="eye-iris">
+                      <div class="eye-lens"></div>
+                  </div>
+              </div>
           </div>
       </div>
   </div>
