--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -44,7 +44,7 @@
     <div class="container">
 
       <a href="#" class="logo">
-        <img src="img/logo.svg" width="40" height="40" loading="lazy" alt="Richard home">
+        <img alt="Richard home" height="40" loading="lazy" src="img/logo-dark.png" width="40">
       </a>
 
       <ul class="social-list">
