--- a/src/html/header.html
+++ b/src/html/header.html
@@ -2,7 +2,7 @@
   <div class="container">
 
     <a href="#" class="logo">
-      <img src="img/logo.svg" width="40" height="40" alt="Richard home">
+      <img alt="Richard home" height="40" src="img/logo-dark.png" width="40">
     </a>
 
     <div class="navbar-buttons">
