--- a/src/html/main.html
+++ b/src/html/main.html
@@ -3,7 +3,6 @@
   <div class="container">
 
     <img src="img/avatar.jpg" width="322" height="322" alt="" class="hero-banner">
-
     <div class="hero-content">
 
       <h1 class="h1 hero-title">Uzhanin Egor</h1>
@@ -18,9 +17,31 @@
       </div>
 
       <p class="hero-text">16 year old developer</p>
+    </div>
+    <div class="hero__contacts">
+      <div class="hero__contact">
+        <a data-href="https://github.com/Gearonix"></a>
+        <img src="img/github.svg"/>
+        <h4>Gearonix</h4>
+      </div>
+
+      <div class="hero__contact">
+        <a data-href="https://t.me/gearonixx"></a>
+        <img src="img/telegram.svg"/>
+        <h4>@gearonixx</h4>
+      </div>
+      <div class="hero__contact">
+        <a data-href="mailto://egor.uzhanin@gmail.com"></a>
+        <img src="img/email.svg"/>
+        <h4>egor.uzhanin@gmail.com</h4>
+      </div>
+      <div class="hero__contact">
+        <a data-href="https://vk.com/id606417601"></a>
+        <img src="img/vk.svg"/>
+        <h4>Uzhanin Egor</h4>
+      </div>
 
     </div>
-
   </div>
 
 </section>
