--- a/src/html/preloader.html
+++ b/src/html/preloader.html
@@ -1,5 +1,5 @@
 
 <div class="loading" data-loading>
-  <img src="img/loading.svg" width="55" height="55" alt="loading" class="img">
+  <img alt="loading" class="img" height="55" src="img/logo-light.png" width="55">
   <img src="img/loading-circle.svg" width="70" height="70" alt="" class="circle">
 </div>
