--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Richard Ryan</title>
-  <meta name="title" content="Richard Ryan">
-  <meta name="description" content="This is a photographer portfolio html template, made by codewithsadee.">
+  <title>Uzhanin Egor</title>
+  <meta name="title" content="Uzhanin Egor">
+  <meta name="description" content="Web developer.">
   <link rel="shortcut icon" href="favicon.svg" type="image/svg+xml">
   <link rel="stylesheet" href="index.css">
   <link rel="stylesheet" href="font/font.css">
@@ -29,7 +29,7 @@
 
     <a class="back-top-btn" data-back-top-btn href="#">0%</a>
 
-    <div class="cursor" data-cursor></div>
+    <div class="cursor disabled" data-cursor></div>
   </div>
   <script src="smooth-scrollbar.js"></script>
   <script src="index.js"></script>
