reworked navbar, fixed UI bugs

--- a/src/html/about.html
+++ b/src/html/about.html
@@ -12,9 +12,11 @@
       <div class="wrapper has-before" data-reveal="right">
 
         <p class="section-text">
-          Build client-side applications with modern features like <em class="em">SPA</em>
-          and maintain semantic coding style among other best practices
-          for SEO optimisation. Use modern <em class="em">tech</em> such as Next.js, Typescript, Styled-Components.
+          I'm a self-taught <em class="em">Front-End Developer</em>
+          located in <em class="em">Moscow</em> region.
+          Creating scalable, performance optimized <em class="em">web applications</em>
+          and some other cool stuff for web with good UX and modern standards.
+          Use <em class="em">modern tech</em> such as Next.js, Typescript, Styled-Components.
         </p>
 
       </div>
@@ -23,14 +25,11 @@
 
     <figure class="about-banner" data-reveal="left">
 
-      <div class="img-holder has-before" style="--width: 900; --height: 590;">
+      <div class="img-holder has-before" style="--width: 900; --height: 600;">
         <img alt="Riachard Ryan" class="img-cover"
              src="img/about-image.png">
       </div>
-
-
     </figure>
-
   </div>
 </section>
 
