--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -9,7 +9,7 @@
         Send me a message.
       </h2>
 
-      <div href="#" class="footer-icon-wrapper" data-reveal>
+      <div class="footer-icon-wrapper" data-reveal>
         <div class="icon-wrapper">
           <a data-href="https://github.com/Gearonix"></a>
           <img src="img/github.svg"></div>
@@ -43,27 +43,27 @@
   <div class="footer-bottom">
     <div class="container">
 
-      <a href="#" class="logo">
+      <a data-href="#home" class="logo">
         <img alt="Richard home" height="40" loading="lazy" src="img/logo-dark.png" width="40">
       </a>
 
       <ul class="social-list">
 
         <li>
-          <a href="https://t.me/gearonixx" class="social-link">Telegram.</a>
+          <a data-href="https://t.me/gearonixx" class="social-link">Telegram.</a>
         </li>
 
         <li>
-          <a href="https://github.com/Gearonix" class="social-link">Github.</a>
+          <a data-href="https://github.com/Gearonix" class="social-link">Github.</a>
         </li>
 
         <li>
-          <a href="https://vk.com/id606417601" class="social-link">Vk.</a>
+          <a data-href="https://vk.com/id606417601" class="social-link">Vk.</a>
         </li>
 
       </ul>
 
-      <a class="copyright" href="#">Egor Uzhanin</a>
+      <a class="copyright" data-href="#home">Egor Uzhanin</a>
 
     </div>
   </div>
