--- a/src/html/portfolio.html
+++ b/src/html/portfolio.html
@@ -1,7 +1,8 @@
 <section class="section portfolio" id="portfolio" aria-labelledby="portfolio-label">
     <div class="container">
         <h2 class="h2 section-title" id="portfolio-label" data-reveal>My Projects</h2>
-        <p class="section-description" data-reveal>Large Web Applications. Watch this!</p>
+        <p class="section-description" data-reveal>My projects are mostly large web applications <br/>
+            made using modern technologies.</p>
         <div class="portfolio-list">
 
             <div class="portfolio-wrapper">
@@ -13,7 +14,7 @@
                         <p>FullStack e-commerce app build on Next.js/Nest.js</p>
                     </div>
                     <div class="card-github">
-                        <a href="https://github.com/Gearonix/Adonis-Ecommerce">
+                        <a data-href="https://github.com/Gearonix/Adonis-Ecommerce">
                             <img src="img/github.png">
                         </a>
                     </div>
@@ -118,8 +119,8 @@
                         <p>Calendar with the ability to plan your day.</p>
                     </div>
                     <div class="card-github">
-                        <a href="https://github.com/Gearonix/Space-Calendar">
-                            <img src="img/github.png">
+                        <a data-href="https://github.com/Gearonix/Space-Calendar">
+                            <img src="img/github.svg">
                         </a>
                     </div>
                 </div>
