--- a/src/html/skills.html
+++ b/src/html/skills.html
@@ -1,7 +1,9 @@
 <section class="section skills">
   <div class="container">
       <h2 class="h2 section-title" id="portfolio-label" data-reveal>My Skills</h2>
-      <p class="section-description" data-reveal>I have a lot of experience with these technologies.</p>
+      <p class="section-description" data-reveal>I have been studying
+          web development for over a year. <br/>
+          During this time I have used a large number of  <br/> different technologies.</p>
       <div class="skills__wrapper">
           <div class="skills__wrapper-section">
               <h4 class="skills__wrapper-title" data-reveal>Main Tech Stack:</h4>
@@ -14,6 +16,7 @@
                   <div class="skills__wrapper-icon">SCSS</div>
                   <div class="skills__wrapper-icon">Jest</div>
                   <div class="skills__wrapper-icon">REST API</div>
+                  <div class="skills__wrapper-icon">Loki</div>
                   <div class="skills__wrapper-icon">Nodejs</div>
                   <div class="skills__wrapper-icon">HTML5</div>
                   <div class="skills__wrapper-icon">React-Testing-Library</div>
