--- a/src/index.html
+++ b/src/index.html
@@ -26,8 +26,7 @@
     @@include('html/skills.html')
     @@include('html/portfolio.html')
     @@include('html/footer.html')
-
-    <a class="back-top-btn" data-back-top-btn href="#">0%</a>
+    <a class="back-top-btn" data-back-top-btn data-href="#home">0%</a>
 
     <div class="cursor disabled" data-cursor></div>
   </div>
